Fixed spacing in article highlight

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -212,7 +212,7 @@
     
     article {
         padding: 2rem;
-        min-height: 22rem;
+        min-height: 24rem;
 
         display: flex;
         flex-direction: column;
